# gateway

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  TEST_SUITE.md  deny.toml  dist-workspace.toml  install.sh  run-checklist.sh
.cargo/: audit.toml
.github/workflows/: ci.yml  docker.yml  nightly.yml  release.yml
crates/gateway-cache/: Cargo.toml
crates/gateway-cache/src/: control.rs  entry.rs  error.rs  hot_registry.rs  key.rs  layer.rs  lib.rs  memory.rs  redis_store.rs  registry_source.rs  replay.rs  stats.rs  status.rs  store.rs  tiered.rs  watcher.rs
crates/gateway-cache/tests/: cache_e2e.rs  redis_l2.rs
crates/gateway-config/: Cargo.toml
crates/gateway-config/src/: apply.rs  crypto.rs  diff.rs  dump.rs  error.rs  interpolate.rs  lib.rs  load.rs  model.rs  schema.rs  store.rs  watch.rs
crates/gateway-config/tests/: config_roundtrip.rs
crates/gateway-control/: Cargo.toml
crates/gateway-control/src/: admin.rs  auth.rs  cache_handle.rs  error.rs  firstboot_shim.rs  gateway.rs  guard.rs  keystore.rs  lib.rs  mcp.rs  providers.rs  route_exec.rs  server.rs  sse_out.rs  state.rs  wire.rs
crates/gateway-control/tests/: http_lifecycle.rs  serve_integration.rs
crates/gateway-dash/: Cargo.toml
crates/gateway-dash/src/: embed.rs  lib.rs  router.rs
crates/gateway-dash/tests/: serve_smoke.rs
crates/gateway-guard/: Cargo.toml
crates/gateway-guard/src/: chain.rs  guardrail.rs  lib.rs  types.rs  webhook.rs
crates/gateway-guard/src/builtin/: keyword.rs  mod.rs  pii.rs  regex_deny.rs  schema.rs  secrets.rs
crates/gateway-llm/: Cargo.toml
crates/gateway-llm/docs/: fidelity-matrix.md
crates/gateway-llm/src/: lib.rs  message.rs  provider.rs  req.rs  resp.rs  sse.rs  stream.rs  toolcall.rs
crates/gateway-llm/src/translate/: aggregate.rs  dialect.rs  mod.rs  structured.rs  warn.rs
crates/gateway-llm/src/translate/ingress/: anthropic_messages.rs  mod.rs  openai_chat.rs  openai_responses.rs
crates/gateway-llm/src/transports/: anthropic.rs  gemini.rs  mod.rs  openai.rs
crates/gateway-llm/tests/: anthropic_transport.rs  conformance.rs  cost_integration.rs  fidelity_matrix.rs  gemini_transport.rs  idempotency_and_errors.rs  openai_transport.rs  structured_output_conformance.rs  tool_aggregation_conformance.rs
crates/gateway-llm/tests/fixtures/: anthropic_messages.json  anthropic_stream.sse  gemini_generate.json  gemini_stream.sse  openai_chat.json  openai_stream.sse
crates/gateway-llm/tests/fixtures/golden/: openai_toolcall_stream.sse
crates/gateway-llm/tests/fixtures/ingress/: anthropic_claude_code.json  openai_chat_codex.json  openai_responses_sdk.json
crates/gateway-mcp/: Cargo.toml
crates/gateway-mcp/src/: acl.rs  error.rs  federation.rs  hash.rs  jsonrpc.rs  lib.rs  registry.rs  server.rs  transport.rs  types.rs
crates/gateway-route/: Cargo.toml
crates/gateway-route/src/: error.rs  executor.rs  lib.rs  route.rs  router.rs  strategy.rs
crates/gateway-spine/: Cargo.toml
crates/gateway-spine/src/: audit.rs  budget.rs  clock.rs  error.rs  key.rs  lib.rs  money.rs  pricing.rs  ratelimit.rs  registry.rs  usage.rs
crates/gateway-spine/tests/: budget_concurrency.rs  spine_smoke.rs
crates/gateway-store/: Cargo.toml
crates/gateway-store/migrations/: 0001_init.sql
crates/gateway-store/src/: error.rs  lib.rs  store.rs  types.rs
crates/gateway-telemetry/: Cargo.toml
crates/gateway-telemetry/src/: export.rs  headers.rs  lib.rs  metrics.rs  otel.rs  policy.rs  prom.rs  row.rs  sink.rs  store.rs
crates/gateway-telemetry/tests/: telemetry_e2e.rs
crates/oximy-gateway/: Cargo.toml
crates/oximy-gateway/src/: cli.rs  firstboot.rs  main.rs  models-dev.json  models.json  state_file.rs
docs/: 2026-06-10-oximy-gateway-design.md  2026-06-11-persistence-and-durable-spend-design.md  2026-06-12-v0.1-test-findings-and-fix-plan.md  FEATURES.md  llms.txt
docs/guide/: configuration.md  deployment.md  guardrails.md  keys-budgets.md  mcp.md  observability.md  providers.md  quickstart.md
docs/plans/: 2026-06-10-p1-00-index.md  2026-06-10-p1-01-spine-foundation.md  2026-06-10-p1-02-llm-types-and-egress.md  2026-06-10-p1-03-translation-conformance.md  2026-06-10-p1-04-http-server-ingress.md  2026-06-10-p1-05-cache-and-registry-reload.md  2026-06-10-p1-06-persistence-and-config.md  2026-06-10-p1-07-telemetry-and-logs.md  2026-06-10-p1-08-dashboard-and-firstboot.md  README.md
docs/research/: NAMING-R2.md  NAMING.md  SYNTHESIS.md  agent-sandboxing-egress.md  agentgateway.md  apim-vendors.md  apisix.md  archgw.md  bifrost.md  cloudflare.md  contextforge.md  dim-dashboard.md  dim-extensibility.md  dim-governance.md  dim-observability.md  dim-oss-ops.md  dim-performance.md  dim-prompts.md  dim-protocols.md  dim-routing.md  dim-unified-api.md  docker-mcp.md  envoy-ai.md  gap-check.md  helicone.md  higress.md  hyperscalers.md  k8s-inference-routing.md  kgateway.md  kong.md  litellm.md  mcp-gateway-startups.md  mcp-registries.md  mcp-security.md  mcp-spec.md  mcpjungle-proxies.md  naming-1.md  naming-2.md  naming-3.md  naming-r2-gateway-literal.md  (+12 more)
docs/superpowers/plans/: 2026-06-12-gateway-dash-reskin.md
docs/superpowers/specs/: 2026-06-12-gateway-dash-reskin-design.md
