[package]
name = "gateway-cache"
description = "Response caching: exact-match, semantic, and provider prompt-cache passthrough"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
gateway-spine = { workspace = true }
gateway-llm = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
arc-swap = "1"
notify = "6"
bytes = { workspace = true }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }

[features]
default = []
redis-l2 = ["dep:redis"]

[dev-dependencies]
tempfile = "3"
