[package]
name = "gateway-config"
description = "One schema'd config source of truth: dump/diff/apply, hot reload, env interpolation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
gateway-spine = { workspace = true }
