[package]
name = "gateway-config"
description = "One schema'd config source of truth: dump/diff/apply, hot reload, env interpolation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
jsonschema = "0.46"
notify = "6"
chacha20poly1305 = "0.10"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }
gateway-spine = { path = "../gateway-spine" }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
