[package]
name = "gateway-dash"
description = "Embedded web dashboard (static SPA assets served from the binary)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
