[package]
name = "gateway-guard"
description = "Guardrails framework + WASM plugin host (PII, injection, moderation, secrets)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
gateway-spine = { workspace = true }
