[package]
name = "gateway-guard"
description = "Guardrails framework + WASM plugin host (PII, injection, moderation, secrets)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
gateway-spine = { path = "../gateway-spine" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
jsonschema = "0.46"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
