[package]
name = "gateway-llm"
description = "LLM ingress adapters, egress provider transports, and the translation core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
gateway-spine = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
serde_json = { workspace = true }
