[package]
name = "gateway-mcp"
description = "MCP gateway: federation, transport bridging, virtual servers, OAuth broker, tool ACL/audit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["full", "process", "io-util"] }
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
gateway-spine = { path = "../gateway-spine" }

[dev-dependencies]
tokio = { version = "1", features = ["full", "process", "io-util", "test-util"] }
