[package]
name = "gateway-spine"
description = "Shared governance spine: identity, virtual keys, budgets, RBAC, audit, policy, pricing/capability registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
