[package]
name = "gateway-store"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "macros", "migrate"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
gateway-spine = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
