[package]
name = "gateway-telemetry"
description = "Telemetry: embedded columnar store, OTel GenAI + MCP semconv, Prometheus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
gateway-spine = { path = "../gateway-spine" }
parking_lot = "0.12"
prometheus-client = "0.22"
subtle = "2"
bytes = "1"
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"], optional = true }
opentelemetry-semantic-conventions = { version = "0.27", optional = true }

[features]
default = ["otel"]
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-semantic-conventions",
]
